<resources>
    <string name="app_name">Al-Tawik Express</string>

    <string name="leader">MUHAMMAD TANTOWI BIN ISNAR</string>
    <string name="member1">MUHAMMAD AKMAL NIZAM BIN ABD RASID</string>
    <string name="member2">MUHAMMAD FIRDAUS BIN MOHIDEEN ABDUL CADER</string>
    <string name="member3">MUHAMMAD KHAIRUL AFIQ BIN KHAIRULAZMAN</string>
    <string name="member4">AZRIEL HAIKAL BIN M.RAMLEE</string>
    <string name="member5">AHMAD MAJDI BIN AHMAD SALAHUDDIN</string>

    <string name="aboutUs">it has been quite long since we get our hands on this project. we are student of Computer Science at Universiti Teknologi Malaysia have been assigned to develop an app that can make people ease when booking a ticket. we all came up with and idea to develop this beautiful work which is AL-TAWIK Express that will not just help our app user to book ticket but it also ensure that your trip will be better planned and organize by us. Dont worry about anything , with a few simple click we will bring you the joy of having true vacation.</string>

    <string-array name="destination_array">
        <item>KL Sentral</item>
        <item>Pekeliling</item>
        <item>Hentian Duta</item>
        <item>Hentian Putra</item>
        <item>Pudu</item>
        <item>Bandar Tasik Selatan</item>
        <item>Sungai Nibong</item>
    </string-array>


    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="e_mail">Email</string>
    <string name="tag">Let\'s join us and \nBook your ticker with our buses</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="mobilephone">Phone Number</string>
    <string name="your_name">Full Name</string>

    <string name="Lbl_ContactUs_Privacy">Faq and contact us</string>
    <string name="Lbl_NeedHelp">Need Help?</string>
    <string name="Lbl_InviteFriendsToTheApp">Invite Friends to use app</string>
    <string name="Lbl_InviteFriends">Invite Friends</string>
    <string name="Lbl_About">About</string>
    <string name="Lbl_Rate">Give your rate and feedback</string>
    <string name="Lbl_Rate_Us">Rate</string>
    <string name="Lbl_Update">Update</string>
    <string name="Lbl_Version_update">Check for the latest version</string>
    <string name="Lbl_Settings">Settings</string>
    <string name="Lbl_EditProfile">Edit Profile</string>
    <string name="Lbl_privacy_policy">App Terms and Policies</string>
    <string name="Lbl_Privacy">Privacy Policy</string>
    <string name="share_app_text">Please kindly share User Profile Template with your friends!</string>
    <string name="title_activity_main_menu3">MainMenu3Activity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

</resources>